# cs5330-hws

./: README.md
Final_Project/: README.MD  model_training_testing.py  models.py  utils.py
Final_Project/archive/: experiments.py  initial_trial.py  initial_trial_cuda.py  initial_trial_cuda_3_layers.py  initial_trial_cuda_rgb.py  trial_larger_size_cuda.py  trial_resnet_cuda.py
Project1/: CMakeLists.txt  filters.cpp  filters.h  imgDisplay.cpp  readme.txt  vidDisplay.cpp
Project2/: CMakeLists.txt  README.MD  buildDb.cpp  csv_util.cpp  csv_util.h  distMetrics.cpp  distMetrics.h  featureCalcs.cpp  featureCalcs.h  filters.cpp  filters.h  imgDisplay.cpp  readme.txt  searchDb.cpp  searchDb.h  searchImg.cpp  utils.cpp  utils.h
Project3/: CMakeLists.txt  README.MD  buildDb.cpp  classify.cpp  classify.h  components.cpp  features.cpp  features.h  file_util.cpp  file_util.h  filters.cpp  filters.h  imgDisplay.cpp  utils.cpp  utils.h  vidDisplay.cpp
Project4/: CMakeLists.txt  README.MD  calibrateCamera.cpp  calibrateProg.cpp  displayAR.cpp  harrisCorner.cpp  objLoader.h  utils.cpp  utils.h
Project5/: README.MD  taskFour.py  taskOne.py  taskOneNNReader.py  taskOneNewInput.py  taskThree.py  taskThreeExt.py  taskTwo.py  test.py
Test_Spaces/: CMakeLists.txt  testrun.cpp  tu_display_img.cpp  tu_video.cpp
Test_Spaces/FilesIO/: CMakeLists.txt  fileIO.cpp
Test_Spaces/Lecture4Coding/: code.cpp
